Watched/Archived status, counters and progress
