# src/Sonarr.Api.V3/Series/SeasonStatisticsResource.cs
@@ -10,6 +10,8 @@ namespace Sonarr.Api.V3.Series
         public DateTime? PreviousAiring { get; set; }
         public int EpisodeFileCount { get; set; }
         public int EpisodeCount { get; set; }
+        public int EpisodeWatchedCount { get; set; }
+        public int EpisodeArchivedCount { get; set; }
         public int TotalEpisodeCount { get; set; }
         public long SizeOnDisk { get; set; }
         public List<string> ReleaseGroups { get; set; }
@@ -23,7 +25,7 @@ namespace Sonarr.Api.V3.Series
                     return 0;
                 }
 
-                return (decimal)EpisodeFileCount / (decimal)EpisodeCount * 100;
+                return (decimal)(EpisodeFileCount + EpisodeArchivedCount) / (decimal)(EpisodeCount + EpisodeArchivedCount) * 100;
             }
         }
     }
@@ -43,6 +45,8 @@ namespace Sonarr.Api.V3.Series
                 PreviousAiring = model.PreviousAiring,
                 EpisodeFileCount = model.EpisodeFileCount,
                 EpisodeCount = model.EpisodeCount,
+                EpisodeWatchedCount = model.EpisodeWatchedCount,
+                EpisodeArchivedCount = model.EpisodeArchivedCount,
                 TotalEpisodeCount = model.TotalEpisodeCount,
                 SizeOnDisk = model.SizeOnDisk,
                 ReleaseGroups = model.ReleaseGroups
