# src/Sonarr.Api.V3/Series/SeriesStatisticsResource.cs
@@ -9,6 +9,8 @@ namespace Sonarr.Api.V3.Series
         public int SeasonCount { get; set; }
         public int EpisodeFileCount { get; set; }
         public int EpisodeCount { get; set; }
+        public int EpisodeWatchedCount { get; set; }
+        public int EpisodeArchivedCount { get; set; }
         public int TotalEpisodeCount { get; set; }
         public long SizeOnDisk { get; set; }
         public List<string> ReleaseGroups { get; set; }
@@ -22,7 +24,7 @@ namespace Sonarr.Api.V3.Series
                     return 0;
                 }
 
-                return (decimal)EpisodeFileCount / (decimal)EpisodeCount * 100;
+                return (decimal)(EpisodeFileCount + EpisodeArchivedCount) / (decimal)(EpisodeCount + EpisodeArchivedCount) * 100;
             }
         }
     }
@@ -41,6 +43,8 @@ namespace Sonarr.Api.V3.Series
                 SeasonCount = seasons == null ? 0 : seasons.Where(s => s.SeasonNumber > 0).Count(),
                 EpisodeFileCount = model.EpisodeFileCount,
                 EpisodeCount = model.EpisodeCount,
+                EpisodeWatchedCount = model.EpisodeWatchedCount,
+                EpisodeArchivedCount = model.EpisodeArchivedCount,
                 TotalEpisodeCount = model.TotalEpisodeCount,
                 SizeOnDisk = model.SizeOnDisk,
                 ReleaseGroups = model.ReleaseGroups
